<resources>
    <string name="app_name">掌上绿源</string>
    <string name="sob">帐套</string>
    <string name="account">用户</string>
    <string name="password">密码</string>
    <string name="login">立即登录</string>
    <string name="reset_password">重置密码</string>
    <string name="username_empty">请输入用户名</string>
    <string name="password_empty">请输入密码</string>
    <string name="username_error">用户名错误</string>
    <string name="password_error">密码错误</string>
    <string name="account_10nlatter">密码输入错误次数过多，请十分钟后再试。</string>
    <string name="false_account_disabled">帐号已经停用</string>
    <string name="validating">正在验证...</string>
    <string name="check_update">正在检查新版本...</string>
    <string name="search">搜索</string>
    <string name="empty">空白</string>
    <string name="update">开始更新</string>
    <string name="home">主页</string>
    <string name="function">功能</string>
    <string name="explore">探索</string>
    <string name="exploring">正在探索</string>
    <string name="usesage">使用说明：功能列表 -> 长按某个功能 -> 添加到主页</string>
    <string name="delete">删除</string>
    <string name="deleted_success">删除成功</string>
    <string name="top">置顶</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="shortcut">添加到主页</string>
    <string name="dialog_choose_job">请选择岗位</string>
    <string name="dialog_choose_material">请选择资料</string>
    <string name="network_disconnected">没有连接网络，请稍后再试。</string>
    <string name="interact_data_error">系统出错了，请把问题反馈给系统管理员。</string>
    <string name="fetch_data_empty">没有查询到资料</string>
    <string name="app_param_error">页面参数错误，请稍后再试。</string>
    <string name="notification_push">消息提醒</string>
    <string name="dialog_hint">提示</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="press_again_exit_application">再按一次退出程序</string>
    <string name="dialog_hint_new_version">掌上绿源有新版本发布，去更新？</string>
    <string name="dialog_downloading_file">正在下载更新文件...</string>
    <string name="dialog_download_error">下载更新文件失败，请稍后再试。</string>
    <string name="update_latest_version">已最新</string>
    <string name="function_voucher_manager">采购入库单管理</string>
    <string name="hint_enter_purchase_order_no">请输入采购订单号</string>
    <string name="order_no">订单编号</string>
    <string name="order_by">订购人</string>
    <string name="order_unit">供应单位</string>
    <string name="choose_warehouse">选择入库仓库</string>
    <string name="prev">上一步</string>
    <string name="next">下一步</string>
    <string name="save">保存</string>
    <string name="check">送检</string>
    <string name="loading">正在加载...</string>
    <string name="enter">进入</string>
    <string name="enter_udf_channel">进入自定义通道</string>
    <string name="dedicated_channel">门店基础资料通道</string>
    <string name="choose_channel">选择自定义通道</string>
    <string name="material_name">资料名称</string>
    <string name="material_remarks">资料备注</string>
    <string name="material_type">选择通道</string>
    <string name="material_transact_state">办结状态</string>
    <string name="material_transact_date">办结时间</string>
    <string name="material_submit_date">提交时间</string>
    <string name="material_submit_by">提交人</string>
    <string name="material_feedback">反馈内容</string>
    <string name="location_place">定位地址</string>
    <string name="area">面积</string>
    <string name="brand">品牌</string>
    <string name="udf">自定义</string>
    <string name="location2">定位</string>
    <string name="locating2">正在定位...</string>
    <string name="location_empty">请定位您的当前地址</string>
    <string name="area_empty">请填写面积</string>
    <string name="brand_empty">请选择品牌，如果是自定义品牌，需要填写品牌名称。</string>
    <string name="choose_query_type">请选择通道类型</string>
    <string name="check_material_exists">系统已经存在一条记录与您当前的定位地址距离在100米以内，是否继续提交？</string>
    <string name="attach_file">附件</string>
    <string name="choose_file">选择文件</string>
    <string name="from_camera">拍照</string>
    <string name="from_photo">相册</string>
    <string name="from_video">视频</string>
    <string name="from_audio">音频</string>
    <string name="submit">提交</string>
    <string name="back">返回</string>
    <string name="submitting">正在提交...</string>
    <string name="submitted_success">提交成功</string>
    <string name="upload_error">附件上传失败，请稍后再试。</string>
    <string name="submitted_error">提交失败，请稍后再试。</string>
    <string name="material_name_empty">请填写资料名称</string>
    <string name="material_files_empty">请添加附件</string>
    <string name="compressing">正在压缩附件...</string>
    <string name="compress_error">压缩附件的时候遇到错误</string>
    <string name="cancel_success">资料取消成功</string>
    <string name="function_report_billboard">销售战报-龙虎榜</string>
    <string name="function_report_billboard_man">销售人员龙虎榜</string>
    <string name="function_report_by_performance">我的业绩</string>
    <string name="function_report_dealer_performance">经销商业绩</string>
    <string name="function_report_personal">销售战报-个人版</string>
    <string name="function_report_tactical">销售战报-战术版</string>
    <string name="function_report_strategy">销售战报-战略版</string>
    <string name="function_query_payroll">薪资查询</string>
    <string name="function_query_training">培训管理</string>
    <string name="function_query_warrant">担保明细</string>
    <string name="function_upload_material">资料上传</string>
    <string name="function_upload_dedicated_material">门店打点</string>
    <string name="function_schedule_manage">日程管理</string>
    <string name="function_market_research">市场调查</string>
    <string name="function_market_strategy">竞争策略</string>
    <string name="function_research_verify">问卷审核</string>
    <string name="function_verification_detail">核销明细</string>
    <string name="function_query_authorization">授权查询</string>
    <string name="function_query_manual">手册管理</string>
    <string name="function_query_express">敌情快报</string>
    <string name="function_query_product">新产品推荐</string>
    <string name="function_query_notification">重要事项通知</string>
    <string name="function_query_score">积分查询</string>
    <string name="function_market_paper_1">市场特征白皮书</string>
    <string name="function_market_paper_2">媒体特征白皮书</string>
    <string name="function_market_paper_3">产品特征白皮书</string>
    <string name="function_chart">图表集合</string>
    <string name="month">月</string>
    <string name="cross">-</string>
    <string name="colon">:</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="sample_date">2014-03-23</string>
    <string name="sample_time">14:00</string>
    <string name="schedule_info">日程信息</string>
    <string name="location_info">定位信息</string>
    <string name="new_schedule">添加日程</string>
    <string name="view_my_schedule">我的日程</string>
    <string name="view_others_schedule">下属日程</string>
    <string name="hint_enter_query">请输入关键字</string>
    <string name="hint_enddate_after_startdate">结束时间应该迟于开始时间</string>
    <string name="hint_schedule_empty">请输入日程内容</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="content">日程内容</string>
    <string name="notification">是否提醒</string>
    <string name="location">考勤</string>
    <string name="locating">正在考勤...</string>
    <string name="located_success">考勤成功</string>
    <string name="refresh">刷新</string>
    <string name="function_about_me">我的资料</string>
    <string name="function_notification_history">我的消息</string>
    <string name="function_follow_someone">我的关注</string>
    <string name="function_change_password">修改密码</string>
    <string name="function_lock_setting">手势设置</string>
    <string name="function_lock_setpwd">返回&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;设置手势密码</string>
    <string name="function_check_version">版本检查</string>
    <string name="contact">电话</string>
    <string name="email">邮箱</string>
    <string name="webchat">微信</string>
    <string name="job">岗位</string>
    <string name="modify">修改</string>
    <string name="modifiable">（可修改）</string>
    <string name="already_latest_version">您的掌上绿源已经是最新版本</string>
    <string name="schedule_remind">日程提醒</string>
    <string name="approve_remind">审核提醒</string>
    <string name="version_remind">版本提醒</string>
    <string name="training_remind">培训通知</string>
    <string name="notification_remind">重要事项通知</string>
    <string name="warrant_remind">担保到期通知</string>
    <string name="notice_remind">消息推送</string>
    <string name="searchvoucher">请输入单号</string>
    <string name="search_loading">正在查询,请稍候...</string>
    <string name="save_success">保存成功</string>
    <string name="submit_success">提交成功</string>
    <string name="function_voucher_create">采购入库单制单</string>
    <string name="order_status">状态</string>
    <string name="function_whinventorybook_search">台帐查询</string>
    <string name="item_name">物料名称</string>
    <string name="item_code">物料编码</string>
    <string name="item_spec">物料规格</string>
    <string name="warehouse_select">仓库名称</string>
    <string name="function_voucher_examine_manage">进货检验单管理</string>
    <string name="hint_enter_whpurchase_no">请输入采购入库单号</string>
    <string name="examine">检验</string>
    <string name="examine_success">检验完毕</string>
    <string name="function_voucher_examine_create">送检单制单</string>
    <string name="function_warehouse_locationinventory_search">整车库位调整查询</string>
    <string name="function_warehouse_locationinventory_add">新增库位明细</string>
    <string name="function_warehouse_whbininfo_search">盘点概况</string>
    <string name="function_warehouse_whbinlackinfo_search">漏盘点库位调整查询</string>
    <string name="ifdel">是否删除?</string>
    <string name="delsuccess">删除成功</string>
    <string name="delfail">删除失败</string>
    <string name="do_loading">正在操作,请稍候...</string>
    <string name="whbin">目视库位</string>
    <string name="sysbin">系统库位</string>
    <string name="product_qty">车型数量 </string>
    <string name="product_code">车型编码</string>
    <string name="product_name">车型名称</string>
    <string name="product_spec">车型规格</string>
    <string name="choose">选择</string>
    <string name="begin_date">开始时间</string>
    <string name="end_date">结束时间</string>
    <string name="bincode">库位编码</string>
    <string name="wbcode_empty">请输入库位号</string>
    <string name="starttime_empty">请输入开始时间</string>
    <string name="endtime_empty">请输入结束时间</string>
    <string name="function_whautomaticscan">整车发货单扫描</string>
    <string name="function_whbincheck">库位盘点</string>
    <string name="function_whbinexchange">库位调整</string>
    <string name="close">关闭</string>
    <string name="function_puroederexamine_search">采购送检单查询</string>
    <string name="hint_enter_bin_no">请输入整车库位号</string>
    <string name="warrant_manage">发起担保</string>
    <string name="warrant_max">我的担保额度</string>
    <string name="warrant_used">已担保</string>
    <string name="warrant_available">还可担保</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="county">县</string>
    <string name="town">乡镇</string>
    <string name="dealer">经销商</string>
    <string name="account_name">账户名</string>
    <string name="warrant_amount">担保金额</string>
    <string name="due_date">到期日期</string>
    <string name="warrant_submit">发起担保</string>
    <string name="hint_dealer_empty">请选择【经销商】</string>
    <string name="hint_amount_empty">请填写【担保金额】</string>
    <string name="hint_due_date_empty">请填写【到期日】</string>
    <string name="hint_due_date_invalid">【到期日】不能早于今天</string>
    <string name="point_report">网点报备</string>
    <string name="sales_area">经销区域</string>
    <string name="detail_address">详细地址</string>
    <string name="shop_address">主店面地址</string>
    <string name="parent_dealer">上级经销商</string>
    <string name="point_name">网点名称</string>
    <string name="contract_num">签约量</string>
    <string name="man_name">负责人姓名</string>
    <string name="man_phone">负责人手机</string>
    <string name="hint_address_shop_empty">请填写主店面地址【详细地址】</string>
</resources>