<?xml version="1.0" encoding="utf-8"?>
	<ScrollView
	android:scrollbars="none"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">


	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:weightSum="1"
		android:orientation="vertical">


	<TableLayout
		android:layout_height="300dp"
		android:layout_width="match_parent"
		android:layout_weight="2.20"
		android:background="#FFEDEDED"
		android:stretchColumns="2"
		android:paddingRight="30dp"
		android:paddingLeft="30dp">


	<TableRow>

	<TextView
		android:layout_height="50dp"
		android:layout_width="wrap_content"
		android:paddingLeft="5dp"
		android:gravity="bottom"
		android:text="@string/order_no"/>

	<TextView
		android:layout_height="50dp"
		android:layout_width="0dp"
		android:layout_weight="1"
		android:paddingLeft="20dp"
		android:gravity="bottom"
		android:text="@string/order_unit"
		android:singleLine="true"
		android:textStyle="bold"
		android:textSize="20dp"
		android:id="@+id/textview_order_no"/>

</TableRow>


	<TableRow>

	<TextView
		android:layout_height="50dp"
		android:layout_width="wrap_content"
		android:paddingLeft="5dp"
		android:gravity="bottom"
		android:text="@string/order_by"/>

	<TextView
		android:layout_height="50dp"
		android:layout_width="0dp"
		android:layout_weight="1"
		android:paddingLeft="20dp"
		android:gravity="bottom"
		android:text="@string/order_unit"
		android:singleLine="true"
		android:textStyle="bold"
		android:textSize="20dp"
		android:id="@+id/textview_order_by"/>

</TableRow>


	<TableRow>

	<TextView
		android:layout_height="50dp"
		android:layout_width="wrap_content"
		android:paddingLeft="5dp"
		android:gravity="bottom"
		android:text="@string/order_status"/>

	<TextView
		android:layout_height="50dp"
		android:layout_width="0dp"
		android:layout_weight="1"
		android:paddingLeft="20dp"
		android:gravity="bottom"
		android:text="@string/order_unit"
		android:singleLine="true"
		android:textStyle="bold"
		android:textSize="20dp"
		android:id="@+id/textview_order_status"/>

</TableRow>


	<TableRow>

	<TextView
		android:layout_height="50dp"
		android:layout_width="wrap_content"
		android:paddingLeft="5dp"
		android:gravity="bottom"
		android:text="@string/order_unit"/>

	<!-- <TextView android:id="@+id/textview_order_unit" android:visibility="visible" /> -->


	<Spinner android:layout_height="wrap_content"
	         android:layout_width="match_parent"
	         android:id="@+id/spinner_unit"/>

</TableRow>


	<TableRow>

	<TextView
		android:layout_height="40dp"
		android:layout_width="wrap_content"
		android:paddingLeft="5dp"
		android:gravity="bottom"
		android:text="@string/choose_warehouse"/>

	<!-- <TextView android:id="@+id/textview_whname" android:visibility="visible" /> -->


	<Spinner
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:id="@+id/spinner_whname"/>

</TableRow>

</TableLayout>

	<!-- <LinearLayout android:layout_width="match_parent" android:layout_height="254dp" android:orientation="vertical" android:paddingLeft="30dp" android:paddingRight="30dp" > <ListView android:layout_marginTop="10dp" android:id="@+id/listview_warehouse_choose_list" android:layout_width="match_parent" android:layout_height="match_parent" android:smoothScrollbar="true" android:scrollbars="none" /> </LinearLayout> -->



	<LinearLayout
		android:layout_height="60dp"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:paddingRight="30dp"
		android:paddingLeft="30dp"
		android:gravity="center"
		android:layout_marginTop="10dp">

	<Button android:layout_height="50dp"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:background="#46C50C"
	        android:text="@string/next"
	        android:textSize="20dp"
	        android:id="@+id/button_next"
	        android:textColor="#FFFFFF"/>

</LinearLayout>

</LinearLayout>

</ScrollView>