<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:scrollbars="none"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">


	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:weightSum="1"
		android:orientation="vertical"
		android:id="@+id/frame_content">


		<TableLayout
			android:layout_height="200dp"
			android:layout_width="match_parent"
			android:layout_weight="2.20"
			android:background="#FFEDEDED"
			android:stretchColumns="2"
			android:paddingRight="30dp"
			android:paddingLeft="30dp">


			<TableRow android:layout_width="match_parent" android:layout_height="wrap_content">

				<TextView
					android:layout_height="50dp"
					android:layout_width="wrap_content"
					android:paddingLeft="5dp"
					android:gravity="bottom"
					android:text="@string/sysbin"/>

				<EditText
					android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:layout_weight="1"
					android:paddingLeft="20dp"
					android:gravity="bottom"
					android:singleLine="true"
					android:textSize="20dp"
					android:id="@+id/textview_sys_bin">
					<requestFocus />
				</EditText>
			</TableRow>


			<TableRow android:layout_width="match_parent" android:layout_height="wrap_content">

				<TextView
					android:layout_height="50dp"
					android:layout_width="wrap_content"
					android:paddingLeft="5dp"
					android:gravity="bottom"
					android:text="@string/whbin"/>

				<EditText
					android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:layout_weight="1"
					android:paddingLeft="20dp"
					android:gravity="bottom"
					android:singleLine="true"
					android:textSize="20dp"
					android:id="@+id/textview_wh_bin">
				</EditText>

			</TableRow>

		</TableLayout>



		<LinearLayout
			android:layout_height="60dp"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:paddingRight="30dp"
			android:paddingLeft="30dp"
			android:gravity="center"
			android:layout_marginTop="10dp">

			<Button android:layout_height="50dp"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:background="#46C50C"
			        android:text="@string/search"
			        android:textSize="20dp"
			        android:id="@+id/button_search"
			        android:textColor="#FFFFFF"
			        />

		</LinearLayout>
		<LinearLayout
			android:layout_height="60dp"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:paddingRight="30dp"
			android:paddingLeft="30dp"
			android:gravity="center"
			android:layout_marginTop="10dp">

			<Button android:layout_height="50dp"
			        android:layout_width="0dp"
			        android:layout_weight="1"
			        android:text="@string/back"
			        android:textSize="20dp"
			        android:id="@+id/button_back"
				/>

		</LinearLayout>
	</LinearLayout>

</ScrollView>